[package]
name = "p2p-node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "request-response"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
serde_json = "1.0"